--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Tickets Emulator",
+  "name": "Public Transport Ticket Emulator",
   "short_name": "Tickets Emulator",
-  "theme_color": "#BDBDBD",
+  "theme_color": "#5B9B21",
   "background_color": "#5B9B21",
   "display": "standalone",
   "orientation": "portrait",
-  "start_url": "/index.html",
+  "start_url": "/public-transport-tickets/index.html",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
@@ -47,6 +47,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "splash_pages": null
+  ]
 }
