--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Public Transport Ticket Emulator",
   "short_name": "Tickets Emulator",
-  "theme_color": "#5B9B21",
+  "theme_color": "#E7EAED",
   "background_color": "#5B9B21",
   "display": "standalone",
   "orientation": "portrait",
